force-app/main/default/objects/MPS_User__c/MPS_User__c.object-meta.xml
<CustomObject>
    <description>This is the Mercury Payment Systems employee record for all MPS users that are passed from DBMercury Pay to Salesforce.</description>
    <label>MPS User</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>MPS User #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPS Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>