force-app/main/default/objects/MPS_User__c/fields/FName__c.field-meta.xml
<CustomField>
    <fullName>FName__c</fullName>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>