force-app/main/default/objects/MPS_User__c/fields/LName__c.field-meta.xml
<CustomField>
    <fullName>LName__c</fullName>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>